# drik

./: .gitignore  README.md  pyproject.toml  run.sh  weak-flight-report.json
.playwright-mcp/: page-2026-06-06T19-58-58-535Z.yml  page-2026-06-06T19-59-33-662Z.yml  page-2026-06-06T20-00-03-548Z.yml  page-2026-06-06T20-00-49-105Z.yml
examples/login-demo/: index.html
skills/drik/: SKILL.md
specs/: atman-masi-early-access.md  auth.md  calibration.md  demo.md  hackernews.md  hn-top5.md  weak-flight-feedback.md
src/drik/: __init__.py  browser.py  cli.py  dashboard.py  model.py  parser.py  report.py  runner.py  serving.py
tests/: test_dashboard.py  test_model.py  test_parser.py  test_serving.py
