[project]
name = "drik"
version = "0.1.0"
description = "Vision-driven UI flow testing for localhost. Write tests in Markdown, let a local vision model click through your app like a human."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["testing", "e2e", "playwright", "vision", "llm", "localhost"]
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
]

[project.scripts]
drik = "drik.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drik"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
